[tool.poetry]
name = "repl_python3_wonderlandmoney"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.0.0"
bs4 = "^0.0.1"
pandas = "^1.3.4"
python-coinmarketcap = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
